# sha256_service

./: CMakeLists.txt  README.md  cleanup.sh  test.txt  test_scheduling.sh
include/: common.h  sha256_ipc.h
src/: admin_client.c  client.c  monitor.c  server.c  sha256.c  utils.c
